fixed z-index issue in SB again

--- a/static/less/module-sickbeard.less
+++ b/static/less/module-sickbeard.less
@@ -44,6 +44,8 @@
     margin: 15px;
   }
 
+  .plot { z-index: 2; }
+
   .coming_ep {
     width: 100%;
     position: relative;
